# free-genai-bootcamp-2025

lang-portal/backend-flask/: app.py
lang-portal/backend-flask/routes/: groups.py  study_sessions.py
listening-comp/: pyproject.toml  setup.py
listening-comp/backend/: audio_generator.py
listening-comp/frontend/: main.py
opea-comps/: docker-compose.yaml
sentence-constructor/chatgpt/: Readme.md  examples.xml  prompt.md
sentence-constructor/deepseek/: Readme.md  prompt.md
