[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "listening-comp"
version = "0.1"
description = "JLPT Listening Practice Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "*"
boto3 = "*"
google-cloud-texttospeech = "*"
azure-cognitiveservices-speech = "*" 